@@ -1,5 +1,13 @@
 2009-03-26  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/event/RendererChangeEvent.java
+    (seriesVisibilityChanged): New field,
+    (RendererChangeEvent(Object)): Delegate to new constructor,
+    (RendererChangeEvent(Object, boolean)): New constructor,
+    (getSeriesVisibilityChanged): New method.
+
+2009-03-26  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/MouseWheelHandler.java: Implemented Serializable.
 
 2009-03-26  David Gilbert  <david.gilbert@object-refinery.com>
